--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <div>
     <h1>Hello World</h1>
 
-    <h2>Welcome to my site!</h2>
+    <p> This is the first commit </p>
+
+    <h2>Welcome to my website!</h2>
 
     <p>Perhaps I should have added this paragraph in the first place.</p>
 
