Revert "Updated index"
This reverts commit db0346cf79c6ea3b47b6041e0a12ee5d33ce29e7.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   <div>
     <h1>Hello World</h1>
 
-    <p> This is the first commit </p>
-
-    <h2>Welcome to my website!</h2>
+    <h2>Welcome to my site!</h2>
 
     <p>Perhaps I should have added this paragraph in the first place.</p>
 
